# danqing-teams

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES  config.example.yaml  danqing-teams.yaml  go.mod  go.sum
.cursor/plans/: teams_agent_platform_cc4dcb38.plan.md
.dq-teams/: config.yaml
.dq-teams/agents/: implementer.md  planner.md  reviewer.md  team.md
.github/workflows/: release.yml
cli/: main.go  run.go
cmd/mcp/: main.go
cmd/server/: main.go
core/bootstrap/: bootstrap.go
core/domain/: agent.go  approval.go  attachment.go  (+23 more)
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/permissions/: write-file-bytes.toml
desktop/src-tauri/resources/coreutils/: README.md
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src-tauri/windows/: hooks.nsh
docs/: core-design.md  launch-posts.md  unified_agent_architecture.md  updater-signing.md
frontend/: DQ-UI.md  KEYBINDINGS.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: build_icons.py  build_sidecar.sh  check_layers.go  ci_prepare_tauri_signing_key.sh  dev_process.sh  fetch_windows_coreutils.sh  generate_icon.py  generate_updater_latest_json.sh  out_paths.sh  pack_desktop_macos.sh  pack_desktop_windows.sh  pack_linux_server.sh  start.sh  start_backend.sh  start_desktop.sh  start_web.sh  stop.sh  sync_updater_mirror.sh
server/: main.go
tui/: main.go
(+799 files in other folders)
