[package]
name = "danqing-teams-desktop"
version = "0.0.0-dev"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"

[lib]
name = "danqing_teams_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]
