[package]
name = "danqing-teams-desktop"
version = "0.7.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"

[lib]
name = "danqing_teams_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]
